Creato con Colaboratory

--- a/amazon_musical_reviews.ipynb
+++ b/amazon_musical_reviews.ipynb
@@ -6,7 +6,7 @@
       "name": "amazon_musical_reviews.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9it/GRIpsp/ceoTKRyMj9",
+      "authorship_tag": "ABX9TyP275pIlPOqGr7fmmnN/jQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'test --dataset music --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'test --dataset music --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
@@ -296,7 +296,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'baseline lstm test --dataset music --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'baseline lstm test --dataset music --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
