Creato con Colaboratory

--- a/amazon_multi_reviews.ipynb
+++ b/amazon_multi_reviews.ipynb
@@ -6,7 +6,7 @@
       "name": "amazon_multi_reviews.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwJS+9jcUFn5UzgC2GLO7v",
+      "authorship_tag": "ABX9TyM2j9T7lxPjp0D4p1+w/KG0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'test --dataset home_multi --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'test --dataset home_multi --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
@@ -296,7 +296,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'baseline lstm test --dataset home_multi --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'baseline lstm test --dataset home_multi --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
