--- a/imdb_movie_reviews.ipynb
+++ b/imdb_movie_reviews.ipynb
@@ -6,7 +6,7 @@
       "name": "imdb_movie_reviews.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpxr0kNcCFqcsnZLTspmhT",
+      "authorship_tag": "ABX9TyMFJeu33lQWhqBsJepWpncQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'test --dataset imdb --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'test --dataset imdb --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
@@ -296,7 +296,7 @@
     {
       "cell_type": "code",
       "source": [
-        "config = 'baseline lstm test --dataset imdb --encoder bert --from_pretrained <pretrained_path>'\n",
+        "config = 'baseline lstm test --dataset imdb --encoder bert --from_pretrained <pretrained_path> --load_data'\n",
         "\n",
         "# Please specify the path of a previous training execution to load the corresponding model's weights"
       ],
